GRF Installation/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Fundraising Interest</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Pending</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>grf01_Chapter_Background__c</fullName>
        <label>Chapter Background</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>grf01_Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grf01_Event_Attendance_Goal__c</fullName>
        <label>Event Attendance Goal</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grf01_Event_Description__c</fullName>
        <label>Event Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>grf01_Fundraising_Goal_Dollars__c</fullName>
        <label>Fundraising Goal (Dollars)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>grf01_Interest_in_Becoming_a_Chapter__c</fullName>
        <label>Interest in Becoming a Chapter</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>grf01_Proposed_Event_Date__c</fullName>
        <inlineHelpText>Entering the proposed event date here will override the numeric date format entered on the Web-to-Lead form.</inlineHelpText>
        <label>Proposed Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>grf01_Proposed_Event_Day__c</fullName>
        <label>Proposed Event Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grf01_Proposed_Event_Month__c</fullName>
        <label>Proposed Event Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grf01_Proposed_Event_Name__c</fullName>
        <label>Proposed Event Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grf01_Proposed_Event_Year__c</fullName>
        <label>Proposed Event Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grf01_Reason_for_Rejection__c</fullName>
        <label>Reason for Fundraising Event Rejection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>grf01_system_Lead_Type__c</fullName>
        <defaultValue>&apos;Chapter&apos;</defaultValue>
        <label>_system: Lead Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Chapter_Interest</fullName>
        <active>true</active>
        <businessProcess>Fundraising Interest</businessProcess>
        <description>GrassRoots Fundraising Chapter Interest for Fundraising Activities</description>
        <label>Fundraiser Interest</label>
    </recordTypes>
</CustomObject>